# cloudpaste

./: Cargo.toml  README.md  wrangler.toml
src/: error.html  gets.rs  handlers.rs  index.html  lib.rs  paste.html  posts.rs
src/assets/: error.html  index.html  main.css  paste.html
src/html/: about.html  error.html  index.html  main.css  paste.html  settings.html  worker.js
